@@ -1,3 +1,8 @@
+0.8.0 /
+[Alexandr Topilski]
+- Redis cluster discovery button doesn't work with protected Redis configuration #59 
+- Edit existing connection settings doesn't show existing parameter values #58 
+
 0.7.9 / October 18, 2015
 [Alexandr Topilski]
 - Font selection for widgets
