@@ -1,4 +1,7 @@
 0.5.7 /
+[Alexandr Topilski]
+- [Redis] Redis cluster discovery button doesn't work with protected Redis configuration #59 
+- [Redis] Edit existing connection settings doesn't show existing parameter values #58 
 
 0.5.6 / October 18, 2015
 [Alexandr Topilski]
